# locust-pinecone

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  colornames.txt  dataset.py  interactive_setup.py  laion-O.py  load_dataset.py  locust.sh  locustfile.py  pyproject.toml  requirements.txt  sample-sbert-vectors.txt  wordlist.10000.txt
.github/: dependabot.yml
.github/actions/create-index/: action.yml
.github/actions/delete-index/: action.yml
.github/workflows/: python-package.yml
tests/integration/: test_interactive_setup.py  test_requests.py
tests/scripts/: create_index.py  delete_index.py
tests/unit/: test_dataset.py
